[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/inventory_slot.png" type="Texture" id=1]
[ext_resource path="res://Inventory/InventorySlot.gd" type="Script" id=2]

[node name="SlotButton" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 18, 18 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 17.0
margin_bottom = 17.0
rect_min_size = Vector2( 6, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="Label" parent="."]
margin_left = 9.01561
margin_top = 10.7834
margin_right = 25.0156
margin_bottom = 24.7834
rect_scale = Vector2( 0.5, 0.5 )
text = "99"
align = 2
[connection signal="mouse_entered" from="." to="." method="_on_SlotButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SlotButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_SlotButton_pressed"]
